feat: completed Task 1.6: Database Model Updates

--- a/doc/payment/5.STRIPE_INTEGRATION_TASKLIST.md
+++ b/doc/payment/5.STRIPE_INTEGRATION_TASKLIST.md
@@ -125,37 +125,40 @@ export const STRIPE_PUBLISHABLE_KEY = Env.STRIPE_PUBLISHABLE_KEY;
 
 ---
 
-### Task 1.6: Database Model Updates
-**Estimated Time**: 2 hours
+### Task 1.6: Database Model Updates ✅
+**Estimated Time**: 2 hours  
+**Status**: COMPLETED
 
-**Files to Update**:
-- `src/db/models/user.model.ts`
-- `src/db/models/wallet.model.ts`
-- `src/db/models/transaction.model.ts`
+**Files Updated**:
+- ✅ `src/db/models/user.model.ts`
+- ✅ `src/db/models/wallet.model.ts`
+- ✅ `src/db/models/transaction.model.ts`
 
 **User Model** (`user.model.ts`):
-- [ ] Add `stripeCustomerId?: string` field
-- [ ] Add `stripeAccountId?: string` field
-- [ ] Add `stripeAccield
-- [ ] Add indexes for Stripe IDs
-- [ ] Update TypeScript interface
+- ✅ Add `stripeCustomerId?: string` field
+- ✅ Add `stripeAccountId?: string` field
+- ✅ Add `stripeAccountStatus?: "pending" | "verified" | "rejected"` field
+- ✅ Add indexes for Stripe IDs (sparse indexes)
+- ✅ Update TypeScript interface
 
 **Wallet Model** (`wallet.model.ts`):
-- [ ] Add `pendingDeposits?: number` field
-- [ ] Add `lastStripeSync?: Date` field
-- [ ] Update TypeScript interface
+- ✅ Add `pendingDeposits?: number` field
+- ✅ Add `lastStripeSync?: Date` field
+- ✅ Update TypeScript interface
 
 **Transaction Model** (`transaction.model.ts`):
-- [ ] Add `stripePaymentIntentId?: string` field
-- [ ] Add `stripeTransferId?: string` field
-- [ ] Add `stripePayoutId?: string` field
-- [ ] Add `stripeStatus?: string` field
-- [ ] Add `stripeError?: string` field
-- [ ] Add indexes for StCriteria**:
-- All models updated
-- TypeScript compiles without errors
-- Indexes created
-- No breaking changes to existing code
+- ✅ Add `stripePaymentIntentId?: string` field
+- ✅ Add `stripeTransferId?: string` field
+- ✅ Add `stripePayoutId?: string` field
+- ✅ Add `stripeStatus?: string` field
+- ✅ Add `stripeError?: string` field
+- ✅ Add indexes for Stripe IDs (sparse indexes)
+
+**Completion Criteria**:
+- ✅ All models updated
+- ✅ TypeScript compiles without errors
+- ✅ Indexes created (sparse indexes for optional Stripe fields)
+- ✅ No breaking changes to existing code
 
 ---
 
