docs(payment): re-strictured all docs

--- a/doc/payment/5.STRIPE_INTEGRATION_TASKLIST.md
+++ b/doc/payment/5.STRIPE_INTEGRATION_TASKLIST.md
@@ -11,7 +11,7 @@ This document provides a comprehensive, step-by-step task list for integrating S
 
 ---
 
-## Phase 1: Setup & Configuration
+## ✅ Phase 1: Setup & Configuration
 
 **Duration**: 3-5 days  
 **Prerequisites**: Stripe account, development environment
@@ -549,7 +549,7 @@ wallet.post(
 
 ---
 
-## ✅ Phase 5: Security & Error Handling
+## ⚠️Phase 5 (Skip for now): Security & Error Handling
 
 **Duration**: 2-3 days  
 **Prerequisites**: Phases 1-4 completed
@@ -656,7 +656,9 @@ wallet.post(
 
 ---
 
-## ✅ Phase 6: Testing & Quality Assurance
+
+
+## ⚠️ Phase 6 (Skip for now) : Testing & Quality Assurance
 
 **Duration**: 3-4 days  
 **Prerequisites**: Phase 5 completed
@@ -765,7 +767,7 @@ wallet.post(
 
 ---
 
-## Phase 7: Production Deployment
+## ⚠️ Phase 7 (Skip for now): Production Deployment
 
 **Duration**: 2-3 days  
 **Prerequisites**: All phases completed, tests passing
