--- a/doc/payment/2.BACKEND_IMPLEMENTATION.md
+++ b/doc/payment/2.BACKEND_IMPLEMENTATION.md
@@ -234,7 +234,7 @@ export const STRIPE_PUBLISHABLE_KEY = Env.STRIPE_PUBLISHABLE_KEY;
 
 **File**: `src/app.ts`
 
-> ⚠️ **CRITICAL**: Webhook route must be registered BEFORE `express.json()` middleware!
+> Webhook route must be registered BEFORE `express.json()` middleware!
 
 ```typescript
 import { webhook } from '@/api/webhooks/webhook.route';
