--- a/doc/payment/3.FRONTEND_API_GUIDE.md
+++ b/doc/payment/3.FRONTEND_API_GUIDE.md
@@ -160,7 +160,176 @@ Add money to wallet using Stripe Payment Intent.
 **Validation**:
 
 - `amount`: Minimum $10, positive number
-- `paymentMethodId`: Stripe payment method ID (from flutter_stripe)
+- `paymentMethodId`: Stripe payment method ID (obtained from Stripe SDK)
+
+#### How to Get `paymentMethodId`
+
+The `paymentMethodId` is obtained from the Stripe SDK on the client side. Here's how to get it:
+
+**Flutter (using `flutter_stripe` package)**:
+
+1. **Install the package**:
+   ```yaml
+   # pubspec.yaml
+   dependencies:
+     flutter_stripe: ^10.0.0
+   ```
+
+2. **Initialize Stripe** (in your app startup):
+   ```dart
+   import 'package:flutter_stripe/flutter_stripe.dart';
+   
+   void main() async {
+     WidgetsFlutterBinding.ensureInitialized();
+     
+     // Set your publishable key
+     Stripe.publishableKey = 'pk_test_...'; // Your Stripe publishable key
+     
+     runApp(MyApp());
+   }
+   ```
+
+3. **Create Payment Method** (when user enters card details):
+   ```dart
+   import 'package:flutter_stripe/flutter_stripe.dart';
+   
+   Future<String?> createPaymentMethod() async {
+     try {
+       // Show card input form
+       await Stripe.instance.presentPaymentSheet();
+       
+       // Or create payment method from card details
+       final paymentMethod = await Stripe.instance.createPaymentMethod(
+         params: PaymentMethodParams.card(
+           paymentMethodData: PaymentMethodData(
+             billingDetails: BillingDetails(
+               email: 'user@example.com',
+               name: 'John Doe',
+             ),
+           ),
+         ),
+       );
+       
+       // Return the payment method ID
+       return paymentMethod.id; // This is your paymentMethodId (pm_xxx...)
+     } catch (e) {
+       print('Error creating payment method: $e');
+       return null;
+     }
+   }
+   ```
+
+4. **Use CardField widget** (for custom UI):
+   ```dart
+   import 'package:flutter_stripe/flutter_stripe.dart';
+   
+   class PaymentScreen extends StatelessWidget {
+     @override
+     Widget build(BuildContext context) {
+       return Scaffold(
+         body: Column(
+           children: [
+             // Card input field
+             CardField(
+               onCardChanged: (card) {
+                 print('Card changed: ${card?.complete}');
+               },
+             ),
+             
+             ElevatedButton(
+               onPressed: () async {
+                 // Create payment method
+                 final paymentMethod = await Stripe.instance.createPaymentMethod(
+                   params: PaymentMethodParams.card(
+                     paymentMethodData: PaymentMethodData(),
+                   ),
+                 );
+                 
+                 // Send to your backend
+                 final paymentMethodId = paymentMethod.id;
+                 await depositToWallet(amount: 100, paymentMethodId: paymentMethodId);
+               },
+               child: Text('Deposit'),
+             ),
+           ],
+         ),
+       );
+     }
+   }
+   ```
+
+**React/Web (using `@stripe/stripe-js` and `@stripe/react-stripe-js`)**:
+
+1. **Install packages**:
+   ```bash
+   npm install @stripe/stripe-js @stripe/react-stripe-js
+   ```
+
+2. **Setup Stripe Elements**:
+   ```jsx
+   import { loadStripe } from '@stripe/stripe-js';
+   import { Elements, CardElement, useStripe, useElements } from '@stripe/react-stripe-js';
+   
+   // Initialize Stripe
+   const stripePromise = loadStripe('pk_test_...'); // Your publishable key
+   
+   function App() {
+     return (
+       <Elements stripe={stripePromise}>
+         <DepositForm />
+       </Elements>
+     );
+   }
+   ```
+
+3. **Create Payment Method**:
+   ```jsx
+   function DepositForm() {
+     const stripe = useStripe();
+     const elements = useElements();
+     
+     const handleDeposit = async (amount) => {
+       if (!stripe || !elements) return;
+       
+       // Get card element
+       const cardElement = elements.getElement(CardElement);
+       
+       // Create payment method
+       const { error, paymentMethod } = await stripe.createPaymentMethod({
+         type: 'card',
+         card: cardElement,
+         billing_details: {
+           name: 'John Doe',
+           email: 'user@example.com',
+         },
+       });
+       
+       if (error) {
+         console.error('Error:', error);
+         return;
+       }
+       
+       // Send to your backend
+       const paymentMethodId = paymentMethod.id; // pm_xxx...
+       await depositToWallet(amount, paymentMethodId);
+     };
+     
+     return (
+       <form onSubmit={(e) => { e.preventDefault(); handleDeposit(100); }}>
+         <CardElement />
+         <button type="submit">Deposit $100</button>
+       </form>
+     );
+   }
+   ```
+
+**Important Notes**:
+
+- Never send raw card details to your backend
+- Always use Stripe SDK to tokenize card information
+- The `paymentMethodId` (pm_xxx...) is safe to send to your backend
+- Use your Stripe **publishable key** (pk_test_... or pk_live_...) on the client
+- Keep your Stripe **secret key** (sk_test_... or sk_live_...) on the backend only
 
 **Response (Success)**:
 
@@ -181,7 +350,7 @@ Add money to wallet using Stripe Payment Intent.
       "type": "deposit",
       "status": "pending",
       "stripePaymentIntentId": "pi_xxx..."
-    },
+    },  
     "wallet": {
       "balance": 900,
       "pendingDeposits": 100
