feat: updated payment doc with new requirements

--- a/doc/payment/1.SYSTEM_OVERVIEW.md
+++ b/doc/payment/1.SYSTEM_OVERVIEW.md
@@ -1,8 +1,8 @@
 # JobSphere Payment System - Complete Overview
 
 **Version**: 2.0.0  
-**Last Updated**: January 24, 2026  
-**Status**: ✅ Production Ready
+**Last Updated**: January 28, 2026  
+**Status**: ✅ Production Ready with Stripe Integration
 
 ---
 
@@ -18,18 +18,20 @@
 
 ## 🎯 System Overview
 
-JobSphere is a wallet-based escrow payment system connecting customers with contractors through secure, commission-based transactions.
+JobSphere is a wallet-based payment system connecting customers with contractors through secure, commission-based transactions. The system uses Stripe for real money transfers while maintaining an internal wallet system for transaction tracking and balance management.
 
 ### Key Features
 
-- ✅ **Wallet System**: Prepaid balance + escrow holding
-- ✅ **Escrow Protection**: Money held safely until job completion
+- ✅ **Stripe Checkout Integration**: Customer deposits via hosted payment page
+- ✅ **Stripe Connect Integration**: Contractor payouts via admin-approved transfers
+- ✅ **Wallet System**: Database-tracked balances (not synced with Stripe in real-time)
 - ✅ **Automated Commissions**: 5% platform fee + 20% service fee
 - ✅ **One Offer Per Job**: Simplified workflow
-- ✅ **Automatic Refunds**: Full refund on rejection/cancellation
-- ✅ **Offer Expiration**: Auto-expires after 7 days
+- ✅ **Automatic Refunds**: Wallet balance adjustments on rejection/cancellation
+- ✅ **Offer Expiration**: Auto-expires after 7 days with automatic refunds
 - ✅ **Transaction History**: Complete audit trail
 - ✅ **Real-time Notifications**: Socket.IO + FCM push notifications
+- ✅ **Admin Approval System**: Admin approves withdrawals and job completions
 
 ---
 
@@ -67,7 +69,14 @@ Contractor Gets: $80
 
 ```
 1. CUSTOMER DEPOSITS MONEY
-   Customer → Deposits $200 → Wallet Balance: $200
+   Customer → Requests deposit via API
+   Backend → Creates Stripe Checkout Session
+   Backend → Returns Checkout URL
+   Customer → Opens URL in browser
+   Customer → Completes payment on Stripe
+   Stripe → Sends webhook to backend
+   Backend → Verifies webhook signature
+   Backend → Updates wallet: +$200
 
 2. CUSTOMER POSTS JOB
    Job created with $100 budget → Status: "open"
@@ -77,34 +86,62 @@ Contractor Gets: $80
 
 4. CUSTOMER SENDS OFFER
    Offer: $100 job + $5 platform fee = $105 total
-   Wallet: $200 - $105 = $95 available
-   Escrow: $105 (locked)
    Offer Status: "pending"
+   No wallet changes yet (pending acceptance)
 
 5A. CONTRACTOR ACCEPTS ✅
-   Platform Fee: $5 → Admin Wallet
-   Escrow: $100 (remaining)
+   Wallet updates (database only, no Stripe transfer):
+   - Customer: $200 - $105 = $95
+   - Admin: +$105
    Job Status: "assigned"
    Other applications: rejected
 
 5B. CONTRACTOR REJECTS ❌
-   Full Refund: $105 → Customer Wallet
-   Wallet: $200 (restored)
+   No wallet changes (offer was pending)
    Application Status: "pending" (reset)
 
 6. CONTRACTOR WORKS
    Job Status: "in_progress"
 
 7. CUSTOMER MARKS COMPLETE
-   Service Fee: $20 → Admin Wallet
-   Contractor Payout: $80 → Contractor Wallet
-   Escrow: $0 (released)
+   Creates completion request
+   Admin reviews in dashboard
+   Admin approves completion
+   Wallet updates (database only):
+   - Admin: $105 - $80 = $25 (keeps commission)
+   - Contractor: +$80
+   Admin initiates Stripe Connect transfer: $80 → Contractor
    Job Status: "completed"
 
 8. CONTRACTOR WITHDRAWS
-   Withdrawal: $50 → Bank Account (2-3 days)
-   Wallet: $30 (remaining)
+   Contractor requests withdrawal: $50
+   Creates pending withdrawal request
+   Admin reviews in dashboard
+   Admin approves withdrawal
+   Wallet update: Contractor $80 - $50 = $30
+   Admin initiates Stripe Connect transfer: $50 → Contractor bank
+   Estimated arrival: 2-3 business days
 ```
+
+### Key Principles
+
+**Stripe as Bank**
+- Stripe holds all real money
+- Customer deposits go to Stripe balance
+- Contractor payouts come from Stripe balance
+- Minimal real money transfers (only deposits and approved payouts)
+
+**Wallet as Ledger**
+- Database tracks all balances
+- Wallet balances updated immediately
+- No real-time sync with Stripe
+- Complete transaction history
+
+**Admin Control**
+- Admin approves all outgoing transfers
+- Admin reviews completion requests
+- Admin reviews withdrawal requests
+- Admin initiates Stripe Connect transfers
 
 ---
 
@@ -188,9 +225,12 @@ Contractor Gets: $80
 
 **1. Wallet**
 
-- Stores user balance (available + escrow)
+- Stores user balance (tracked in database)
+- No escrow balance (simplified)
 - Tracks lifetime earnings/spending
 - Supports freeze functionality
+- Stores Stripe Customer ID (for deposits)
+- Stores Stripe Connect Account ID (for payouts, contractors only)
 
 **2. Offer**
 
@@ -198,12 +238,14 @@ Contractor Gets: $80
 - Stores all commission amounts
 - Tracks status and timestamps
 - Auto-expires after 7 days
+- Wallet changes happen on acceptance, not creation
 
 **3. Transaction**
 
 - Immutable audit trail
-- 8 transaction types
+- Multiple transaction types (including Stripe-related)
 - Links to offers, jobs, users
+- Stores Stripe IDs (Payment Intent, Transfer, Checkout Session)
 - Complete money movement history
 
 **4. Job** (Extended)
@@ -212,6 +254,7 @@ Contractor Gets: $80
 - Tracks contractor assignment
 - Links to accepted offer
 - Stores completion timestamps
+- Tracks completion approval status
 
 ---
 
@@ -263,32 +306,46 @@ if (wallet.balance < totalCharge) {
 }
 ```
 
-- Customer must deposit money before sending offers
+- Customer must deposit money (via Stripe) before sending offers
 - Balance checked before every transaction
 - Prevents overdrafts and negative balances
+- Balance tracked in database, not synced with Stripe in real-time
 
-### 3. Escrow Management
+### 3. Wallet Management
 
 ```typescript
-// Money locked in escrow until decision
-wallet.balance -= totalCharge;
-wallet.escrowBalance += totalCharge;
+// Money tracked in database wallet
+// On offer acceptance:
+customerWallet.balance -= totalCharge;
+adminWallet.balance += totalCharge;
+
+// On job completion (admin approved):
+adminWallet.balance -= contractorPayout;
+contractorWallet.balance += contractorPayout;
+// Admin initiates Stripe Connect transfer
 ```
 
-- Money moved to escrow when offer sent
-- Released on acceptance/rejection/expiration
-- Protects both parties
+- Money tracked in database wallets
+- Wallet adjustments happen immediately
+- Real Stripe transfers happen only on:
+  1. Customer deposits (Stripe Checkout)
+  2. Admin-approved contractor payouts (Stripe Connect)
+  3. Admin-approved withdrawals (Stripe Connect)
+- Protects both parties with admin oversight
 
 ### 4. Status Transitions
 
 ```
 Job: open → assigned → in_progress → completed/cancelled
 Offer: pending → accepted/rejected/cancelled/expired
+Completion: pending_approval → approved → completed
+Withdrawal: pending_approval → approved → processed
 ```
 
 - Strict status flow enforcement
 - Invalid transitions rejected
 - Terminal states (completed/cancelled)
+- Admin approval required for payouts
 
 ---
 
@@ -301,12 +358,12 @@ Offer: pending → accepted/rejected/cancelled/expired
 - Push notifications via FCM
 - Complete transaction history
 
-### Payment Gateway (Future)
+### Payment Gateway
 
-- Stripe integration for deposits
-- Stripe Connect for withdrawals
-- Webhook handling for confirmations
-- Automatic payment processing
+- Stripe Checkout for customer deposits
+- Stripe Connect for contractor payouts
+- Webhook handling for payment confirmations
+- Admin-initiated transfers for security
 
 ### Notification System
 
@@ -323,22 +380,26 @@ Offer: pending → accepted/rejected/cancelled/expired
 
 **Core Payment System**
 
-- [x] Wallet management (balance + escrow)
-- [x] Offer creation (3 flows: application, invite, direct)
-- [x] Offer acceptance/rejection
-- [x] Job completion with payment release
+- [x] Wallet management (database-tracked balance)
+- [x] Stripe Checkout integration for deposits
+- [x] Stripe Connect setup for payouts
+- [x] Webhook handling for payment confirmations
+- [x] Offer creation and management
+- [x] Offer acceptance/rejection with wallet updates
+- [x] Job completion with admin approval
 - [x] Job cancellation with refunds
 - [x] Transaction history
-- [x] Withdrawal functionality
+- [x] Withdrawal requests with admin approval
 
 **Business Logic**
 
 - [x] Commission calculation (5% + 20%)
-- [x] Escrow hold/release
-- [x] Platform fee transfer on acceptance
+- [x] Wallet balance tracking
+- [x] Platform fee collection on acceptance
 - [x] Service fee + payout on completion
 - [x] Full refund on rejection
 - [x] Automatic offer expiration (7 days)
+- [x] Admin approval workflow
 
 **Security & Data Integrity**
 
@@ -347,6 +408,7 @@ Offer: pending → accepted/rejected/cancelled/expired
 - [x] Balance validation
 - [x] Authorization checks
 - [x] Input validation (Zod schemas)
+- [x] Stripe webhook signature verification
 
 **Admin Features**
 
@@ -354,6 +416,9 @@ Offer: pending → accepted/rejected/cancelled/expired
 - [x] Auto-create admin wallet
 - [x] Commission collection
 - [x] Transaction monitoring
+- [x] Completion approval system
+- [x] Withdrawal approval system
+- [x] Stripe Connect transfer initiation
 
 **Notifications**
 
@@ -362,21 +427,22 @@ Offer: pending → accepted/rejected/cancelled/expired
 - [x] 10 notification types
 - [x] Multi-device support
 
-### ⚠️ Pending Features (Optional)
+### 🔄 Implementation Notes
 
-**Stripe Integration** (Future Enhancement)
+**Stripe Integration Status**
+- ✅ Architecture designed
+- ✅ Documentation complete
+- ⏳ Code implementation pending
+- ⏳ Webhook endpoint implementation pending
+- ⏳ Admin dashboard for approvals pending
 
-- [ ] Stripe Payment Intents for deposits
-- [ ] Stripe Connect for withdrawals
-- [ ] Webhook handling
-- [ ] Payment confirmation
-
-**Additional Features** (Future)
-
-- [ ] Partial refunds
-- [ ] Dispute resolution
-- [ ] Multi-currency support
-- [ ] Milestone payments
+**What Needs Implementation**
+1. Stripe SDK integration in backend
+2. Checkout Session creation endpoint
+3. Webhook endpoint with signature verification
+4. Stripe Connect account creation for contractors
+5. Admin dashboard for approval workflows
+6. Stripe Connect transfer initiation logic
 
 ---
 
@@ -412,22 +478,31 @@ Offer: pending → accepted/rejected/cancelled/expired
 ```
 Wallet:
 GET    /api/wallet                    # Get balance
-POST   /api/wallet/deposit            # Add money
-POST   /api/wallet/withdraw           # Withdraw (contractors)
+POST   /api/wallet/deposit            # Get Stripe Checkout URL
+POST   /api/wallet/withdraw           # Request withdrawal (pending admin approval)
 GET    /api/wallet/transactions       # History
+
+Webhooks:
+POST   /api/webhooks/stripe           # Stripe webhook handler
 
 Offers:
 POST   /api/offer/application/:id/send    # Send offer (application)
 POST   /api/offer/invite/:id/send         # Send offer (invite)
 POST   /api/offer/direct/:id/send         # Send offer (direct)
-POST   /api/offer/:id/accept               # Accept offer
-POST   /api/offer/:id/reject               # Reject offer
+POST   /api/offer/:id/accept               # Accept offer (updates wallets)
+POST   /api/offer/:id/reject               # Reject offer (no wallet changes if pending)
 POST   /api/offer/:id/cancel               # Cancel offer
 
 Jobs:
-POST   /api/job/:id/complete          # Mark complete
-POST   /api/job/:id/cancel            # Cancel job
+POST   /api/job/:id/complete          # Mark complete (creates approval request)
+POST   /api/job/:id/cancel            # Cancel job (refunds wallet)
 PATCH  /api/job/:id/status            # Update status
+
+Admin:
+GET    /api/admin/completion-requests      # List pending completions
+POST   /api/admin/completion/:id/approve   # Approve completion + initiate Stripe transfer
+GET    /api/admin/withdrawal-requests      # List pending withdrawals
+POST   /api/admin/withdrawal/:id/approve   # Approve withdrawal + initiate Stripe transfer
 ```
 
 ### Commission Calculation
@@ -445,9 +520,11 @@ const calculateCommission = (jobBudget: number) => ({
 ### Status Flow
 
 ```
-Job: open → assigned → in_progress → completed
+Job: open → assigned → in_progress → pending_completion → completed
 Offer: pending → accepted → completed
 Application: pending → accepted/rejected
+Completion: pending_approval → approved
+Withdrawal: pending_approval → approved → processed
 ```
 
 ---
@@ -555,13 +632,42 @@ This documentation is organized into 6 focused documents:
 
 ## 📝 Changelog
 
-### Version 2.0.0 (January 24, 2026)
+### Version 2.0.0 (January 28, 2026)
 
-- ✅ Consolidated documentation (6 core documents)
-- ✅ Removed duplicated content
-- ✅ Improved organization
-- ✅ Added quick navigation
-- ✅ Updated status to Production Ready
+**Major Update: Stripe Integration Architecture**
+
+- ✅ Redesigned payment flow with Stripe integration
+- ✅ Stripe Checkout for customer deposits
+- ✅ Stripe Connect for contractor payouts
+- ✅ Webhook handling architecture
+- ✅ Admin approval workflow for payouts
+- ✅ Removed escrow balance (simplified to single balance)
+- ✅ Updated all documentation
+
+**Key Changes**
+
+- **Deposits**: Backend generates Stripe Checkout URL, customer pays in browser
+- **Wallet**: Single balance field (removed escrowBalance)
+- **Offer Acceptance**: Immediate wallet updates (no real Stripe transfer)
+- **Job Completion**: Admin approval required, then Stripe Connect transfer
+- **Withdrawals**: Admin approval required, then Stripe Connect transfer
+- **Stripe as Bank**: All real money stays in Stripe, wallet tracks ledger
+
+**Breaking Changes**
+
+- Removed `escrowBalance` from Wallet model
+- Changed deposit API to return Checkout URL instead of processing payment
+- Changed withdrawal API to create pending request instead of immediate processing
+- Added admin approval endpoints for completions and withdrawals
+- Updated transaction types to include Stripe IDs
+
+**Implementation Status**
+
+- ✅ Architecture designed
+- ✅ Documentation complete
+- ⏳ Code implementation pending
+- ⏳ Stripe SDK integration pending
+- ⏳ Admin dashboard pending
 
 ### Version 1.0.0 (November 13, 2025)
 
@@ -579,3 +685,129 @@ This documentation is organized into 6 focused documents:
 - Backend Dev → [2.BACKEND_IMPLEMENTATION.md](./2.BACKEND_IMPLEMENTATION.md)
 - Frontend Dev → [3.FRONTEND_API_GUIDE.md](./3.FRONTEND_API_GUIDE.md)
 - Stripe Setup → [4.STRIPE_INTEGRATION.md](./4.STRIPE_INTEGRATION.md)
+
+---
+
+## 🎯 Quick Summary: New Payment Flow
+
+### What Changed?
+
+**Old System (v1.0)**
+- Escrow-based: Money moved to escrow on offer send
+- Direct transfers: Platform fee and service fee transferred automatically
+- Immediate withdrawals: Contractors could withdraw anytime
+
+**New System (v2.0)**
+- Wallet-based ledger: All balances tracked in database
+- Stripe as bank: Real money stays in Stripe
+- Admin approval: All outgoing transfers require admin approval
+- Minimal real transfers: Only deposits and approved payouts use Stripe
+
+### Key Principles
+
+1. **Stripe Holds Real Money**
+   - Customer deposits → Stripe balance
+   - Contractor payouts → From Stripe balance
+   - Platform acts as intermediary
+
+2. **Wallet Tracks Everything**
+   - Database wallet = ledger
+   - Immediate balance updates
+   - No real-time Stripe sync
+   - Complete audit trail
+
+3. **Admin Controls Outflows**
+   - Reviews completion requests
+   - Reviews withdrawal requests
+   - Initiates Stripe Connect transfers
+   - Prevents fraud and errors
+
+4. **Minimal Real Transfers**
+   - Only 3 types of real money movement:
+     1. Customer deposit (Stripe Checkout)
+     2. Contractor payout on completion (Stripe Connect)
+     3. Contractor withdrawal (Stripe Connect)
+   - All other transactions are wallet adjustments
+
+### Implementation Checklist
+
+**Backend Tasks**
+- [ ] Install Stripe SDK (`npm install stripe`)
+- [ ] Create Stripe service wrapper
+- [ ] Implement Checkout Session creation
+- [ ] Implement webhook endpoint with signature verification
+- [ ] Update Wallet model (remove escrowBalance, add Stripe IDs)
+- [ ] Update Transaction model (add Stripe IDs)
+- [ ] Implement admin approval endpoints
+- [ ] Implement Stripe Connect transfer logic
+- [ ] Update offer acceptance logic (wallet updates only)
+- [ ] Update job completion logic (create approval request)
+- [ ] Update withdrawal logic (create approval request)
+
+**Admin Dashboard Tasks**
+- [ ] Create completion requests list view
+- [ ] Create withdrawal requests list view
+- [ ] Add approve/reject buttons
+- [ ] Show Stripe transfer status
+- [ ] Add transaction history view
+
+**Mobile App Tasks**
+- [ ] Update deposit flow (open Checkout URL in browser)
+- [ ] Add `url_launcher` package
+- [ ] Handle post-payment return (polling or push notification)
+- [ ] Update withdrawal flow (show pending status)
+- [ ] Update job completion flow (show pending approval)
+
+**Testing Tasks**
+- [ ] Test Stripe Checkout in test mode
+- [ ] Test webhook signature verification
+- [ ] Test wallet balance updates
+- [ ] Test admin approval workflow
+- [ ] Test Stripe Connect transfers
+- [ ] Test refund scenarios
+- [ ] Test offer expiration
+
+### Environment Setup
+
+```bash
+# Required Stripe environment variables
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_PUBLISHABLE_KEY=pk_test_...
+STRIPE_WEBHOOK_SECRET=whsec_...
+
+# For production
+STRIPE_SECRET_KEY=sk_live_...
+STRIPE_PUBLISHABLE_KEY=pk_live_...
+STRIPE_WEBHOOK_SECRET=whsec_...
+```
+
+### Stripe Dashboard Setup
+
+1. **Enable Payment Methods**
+   - Go to Settings → Payment methods
+   - Enable cards, wallets (Apple Pay, Google Pay)
+
+2. **Create Webhook Endpoint**
+   - Go to Developers → Webhooks
+   - Add endpoint: `https://yourdomain.com/api/webhooks/stripe`
+   - Select events: `checkout.session.completed`, `checkout.session.async_payment_succeeded`, `checkout.session.async_payment_failed`
+
+3. **Configure Connect**
+   - Go to Connect → Settings
+   - Choose Express or Custom accounts
+   - Configure branding
+   - Set payout schedule
+
+### Support Resources
+
+- **Stripe Documentation**: https://docs.stripe.com
+- **Stripe Checkout Guide**: https://docs.stripe.com/payments/checkout
+- **Stripe Connect Guide**: https://docs.stripe.com/connect
+- **Webhook Guide**: https://docs.stripe.com/webhooks
+- **Node.js SDK**: https://github.com/stripe/stripe-node
+
+---
+
+**System Status**: ✅ Architecture Complete, ⏳ Implementation Pending  
+**Documentation Version**: 2.0.0  
+**Last Updated**: January 28, 2026
