--- a/doc/payment/1.MAIN-REFERENCE.md
+++ b/doc/payment/1.MAIN-REFERENCE.md
@@ -1,8 +1,8 @@
 # JobSphere Payment System - Complete Documentation
 
-**Version**: 1.0.0  
-**Last Updated**: November 13, 2025  
-**Status**: ✅ Production Ready
+**Version**: 2.0.0  
+**Last Updated**: January 28, 2026  
+**Status**: ✅ Production Ready with Stripe Integration
 
 ---
 
@@ -27,17 +27,18 @@
 
 ## Overview
 
-The JobSphere Payment System is a comprehensive escrow-based payment platform designed for service marketplaces. It facilitates secure transactions between customers and contractors with automated commission handling, real-time notifications, and complete transaction tracking.
+The JobSphere Payment System is a comprehensive wallet-based payment platform designed for service marketplaces. It facilitates secure transactions between customers and contractors with automated commission handling, Stripe integration for real money transfers, and complete transaction tracking.
 
 ### Key Highlights
 
-- **Escrow-Based Security**: All payments are held in escrow until job completion
+- **Stripe Integration**: Real money deposits via Stripe Checkout and payouts via Stripe Connect
+- **Wallet-Based Tracking**: Internal wallet system tracks all transactions in database
 - **Automated Commissions**: Platform fees and service fees are automatically calculated and distributed
 - **One Offer Per Job**: Simplified workflow with single offer acceptance
-- **Automatic Refunds**: Failed transactions and cancellations trigger instant refunds
+- **Automatic Refunds**: Failed transactions and cancellations trigger instant wallet adjustments
 - **Real-Time Updates**: WebSocket integration for instant notifications
 - **Transaction History**: Complete audit trail of all financial activities
-- **Withdrawal Support**: Contractors can withdraw earnings with configurable limits
+- **Admin-Approved Payouts**: Contractors request withdrawals, admin approves via Stripe Connect
 
 ---
 
@@ -48,10 +49,17 @@ The JobSphere Payment System is a comprehensive escrow-based payment platform de
 The payment system consists of several interconnected modules:
 
 **Wallet Management**
-- Handles user balances (available and escrow)
-- Processes deposits and withdrawals
+- Handles user balances (tracked in database)
+- Processes deposits via Stripe Checkout
+- Processes withdrawals via Stripe Connect (admin-approved)
 - Tracks lifetime earnings and spending
 - Supports wallet freeze functionality
+
+**Stripe Integration**
+- Stripe Checkout for customer deposits (hosted payment page)
+- Stripe Connect for contractor payouts (admin-initiated transfers)
+- Webhook handling for payment confirmations
+- Secure payment processing with PCI compliance
 
 **Offer System**
 - Manages job offers between customers and contractors
@@ -60,10 +68,10 @@ The payment system consists of several interconnected modules:
 - Implements automatic expiration (7 days)
 
 **Transaction Engine**
-- Records all financial movements
+- Records all financial movements in database
 - Supports multiple transaction types
 - Maintains complete audit trail
-- Handles failed transaction recovery
+- Wallet-based balance tracking (no real-time Stripe balance sync)
 
 **Job Payment Integration**
 - Links jobs with payment processing
@@ -74,12 +82,13 @@ The payment system consists of several interconnected modules:
 **Admin Service**
 - Auto-creates admin user and wallet
 - Manages commission collection
+- Approves contractor withdrawal requests
+- Initiates Stripe Connect transfers
 - Provides system-wide payment oversight
-- Supports environment configuration
 
 **Automated Jobs**
 - Offer expiration cron job (runs hourly)
-- Automatic refund processing
+- Automatic wallet adjustments for refunds
 - Notification dispatch
 - Application status reset
 
@@ -109,13 +118,19 @@ Each user has a dedicated wallet with two balance types:
 
 **Deposit Functionality**
 - Minimum deposit: $10
-- Integrated with payment gateways
-- Instant balance updates
-- Transaction logging
+- Integrated with Stripe Checkout (hosted payment page)
+- Backend generates Stripe Checkout Session URL
+- Customer opens URL in default browser (not in-app)
+- Webhook confirms payment and updates wallet balance
+- Transaction logging in database
 
 **Withdrawal System** (Contractors Only)
 - Minimum withdrawal: $10
 - Maximum withdrawal: $10,000
+- Contractor requests withdrawal via API
+- Request creates pending withdrawal record
+- Admin reviews request in admin dashboard
+- Admin approves and initiates Stripe Connect transfer
 - Estimated arrival: 2-3 business days
 - Requires sufficient available balance
 - Blocked if wallet is frozen
@@ -132,13 +147,17 @@ Each user has a dedicated wallet with two balance types:
 **Accepting Offers** (Contractor Only)
 - Reviews offer details and earnings breakdown
 - Accepts to start job
-- Triggers platform fee transfer to admin
+- Wallet balances updated immediately (no real money transfer)
+- Customer wallet decreased by total charge
+- Admin wallet increased by total charge
 - Updates job status to "assigned"
 - Rejects other pending applications
 
 **Rejecting Offers** (Contractor Only)
 - Provides rejection reason
-- Triggers full refund to customer
+- Wallet balances reversed immediately
+- Admin wallet decreased by total charge
+- Customer wallet increased by total charge (full refund)
 - Resets application status
 - Allows customer to send new offer
 - Sends notification to customer
@@ -146,7 +165,7 @@ Each user has a dedicated wallet with two balance types:
 **Automatic Expiration**
 - Offers expire after 7 days
 - Automated hourly check
-- Full refund on expiration
+- Wallet balances reversed (full refund)
 - Application status reset
 - Notification to customer
 
@@ -160,16 +179,23 @@ Each user has a dedicated wallet with two balance types:
 - **Cancelled**: Job cancelled, refunds processed
 
 **Payment Release** (On Completion)
-- Service fee transferred to admin
-- Contractor payout transferred to contractor
-- Escrow released
+- Customer marks job as complete
+- Creates pending completion request
+- Admin reviews in admin dashboard
+- Admin approves completion request
+- Wallet balances updated:
+  - Admin wallet decreased by contractor payout
+  - Contractor wallet increased by contractor payout
+- Admin initiates Stripe Connect transfer to contractor
 - Transaction records created
 - Notifications sent to all parties
 
 **Job Cancellation**
 - Available before completion
 - Full refund to customer if offer exists
-- Escrow released immediately
+- Wallet balances reversed immediately:
+  - Admin wallet decreased by total charge
+  - Customer wallet increased by total charge
 - Cancellation reason recorded
 - Notifications to affected parties
 
@@ -257,7 +283,14 @@ For a $100 job:
 
 **Step 1: Customer Preparation**
 - Customer registers and logs in
-- Deposits money into wallet (e.g., $200)
+- Requests deposit via API
+- Backend creates Stripe Checkout Session
+- Backend returns Checkout Session URL
+- Customer opens URL in default browser (not in-app)
+- Customer completes payment on Stripe-hosted page
+- Stripe sends webhook to backend
+- Backend verifies webhook signature
+- Backend updates wallet balance in database (e.g., +$200)
 - Posts job with budget (e.g., $100)
 - Waits for contractor applications
 
@@ -277,28 +310,28 @@ For a $100 job:
   - Total charge: $105
   - Service fee: $20
   - Contractor payout: $80
-- Customer wallet: $200 - $105 = $95 available
-- Escrow balance: $105
 - Offer status: "pending"
+- No wallet changes yet (pending acceptance)
 
 **Step 4: Offer Response**
 
 **Option A: Acceptance**
 - Contractor reviews offer
 - Accepts offer
-- Platform fee ($5) transferred to admin
+- Wallet balances updated immediately:
+  - Customer wallet: $200 - $105 = $95
+  - Admin wallet: +$105
 - Job status changes to "assigned"
 - Contractor assigned to job
 - Other applications rejected automatically
-- Remaining $100 stays in escrow
 - Notifications sent
+- **Note**: No real money transferred to Stripe yet
 
 **Option B: Rejection**
 - Contractor reviews offer
 - Provides rejection reason
-- Full $105 refunded to customer wallet
-- Customer wallet: $200 available
-- Application status: "pending"
+- No wallet changes (offer was pending)
+- Application status: "pending" (reset)
 - Customer can send new offer
 - Notification sent to customer
 
@@ -310,19 +343,27 @@ For a $100 job:
 
 **Step 6: Job Completion**
 - Customer marks job as complete
-- Service fee ($20) transferred to admin
-- Contractor payout ($80) transferred to contractor
-- Escrow released
+- Creates pending completion request
+- Admin reviews request in admin dashboard
+- Admin approves completion
+- Wallet balances updated:
+  - Admin wallet: $105 - $80 = $25 (keeps commission)
+  - Contractor wallet: +$80
+- Admin initiates Stripe Connect transfer to contractor ($80)
 - Job status: "completed"
 - Offer status: "completed"
 - Transaction records created
 - Notifications sent
 
-**Step 7: Withdrawal (Optional)**
+**Step 7: Withdrawal (Contractor)**
 - Contractor has $80 available
-- Requests withdrawal (e.g., $50)
+- Requests withdrawal via API (e.g., $50)
 - System validates balance
-- Processes withdrawal
+- Creates pending withdrawal request
+- Admin reviews in admin dashboard
+- Admin approves withdrawal
+- Admin initiates Stripe Connect transfer ($50)
+- Contractor wallet: $80 - $50 = $30
 - Estimated arrival: 2-3 business days
 - Transaction recorded
 
@@ -331,15 +372,18 @@ For a $100 job:
 **Job Cancellation**
 - Customer or admin cancels job
 - Cancellation reason recorded
-- If offer exists: Full refund to customer
-- Escrow released
+- If offer accepted: Wallet balances reversed
+  - Admin wallet: $105 - $105 = $0
+  - Customer wallet: $95 + $105 = $200 (full refund)
 - Job status: "cancelled"
 - Notification to contractor
 
 **Offer Expiration**
 - Offer reaches 7-day limit
 - Automated job identifies expired offer
-- Full refund to customer
+- If offer was accepted: Wallet balances reversed
+  - Admin wallet decreased
+  - Customer wallet increased (full refund)
 - Application status reset
 - Notification sent
 - Customer can send new offer
@@ -364,25 +408,37 @@ Content-Type: application/json
 GET /api/wallet
 ```
 **Authentication**: Required  
-**Returns**: User's wallet with available and escrow balances
+**Returns**: User's wallet with available balance (tracked in database)
 
 #### Deposit Money
 ```
 POST /api/wallet/deposit
 ```
 **Authentication**: Required  
-**Body**: `amount` (number), `paymentMethodId` (string)  
+**Body**: `amount` (number)  
 **Validation**: Minimum $10  
-**Returns**: Updated wallet and transaction details
+**Returns**: Stripe Checkout Session URL
+**Flow**:
+1. Backend creates Stripe Checkout Session
+2. Returns session URL to client
+3. Client opens URL in default browser
+4. Customer completes payment on Stripe
+5. Stripe sends webhook to backend
+6. Backend verifies webhook and updates wallet
 
-#### Withdraw Money
+#### Request Withdrawal
 ```
 POST /api/wallet/withdraw
 ```
 **Authentication**: Required (Contractors only)  
 **Body**: `amount` (number)  
 **Validation**: Min $10, Max $10,000, sufficient balance  
-**Returns**: Withdrawal confirmation and new balance
+**Returns**: Withdrawal request confirmation
+**Flow**:
+1. Creates pending withdrawal request
+2. Admin reviews in dashboard
+3. Admin approves and initiates Stripe Connect transfer
+4. Wallet balance updated after approval
 
 #### Get Transaction History
 ```
@@ -391,6 +447,18 @@ GET /api/wallet/transactions
 **Authentication**: Required  
 **Query Parameters**: `page`, `limit`, `type` (optional)  
 **Returns**: Paginated list of transactions
+
+#### Stripe Webhook Handler
+```
+POST /api/webhooks/stripe
+```
+**Authentication**: Webhook signature verification  
+**Headers**: `Stripe-Signature`  
+**Body**: Stripe event payload  
+**Handles**:
+- `checkout.session.completed` - Updates wallet on successful deposit
+- `checkout.session.async_payment_succeeded` - Handles delayed payments
+- `checkout.session.async_payment_failed` - Handles failed payments
 
 ### Offer Endpoints
 
@@ -441,7 +509,13 @@ POST /api/job/:id/complete
 ```
 **Authentication**: Required (Customer only)  
 **Prerequisites**: Job must be "in_progress"  
-**Returns**: Completed job details, payment breakdown
+**Returns**: Completed job details, pending admin approval
+**Flow**:
+1. Creates completion request
+2. Admin reviews in dashboard
+3. Admin approves completion
+4. Wallet balances updated
+5. Admin initiates Stripe Connect transfer to contractor
 
 #### Cancel Job
 ```
@@ -503,9 +577,30 @@ POST /api/job/:id/cancel
 
 **Wallet Features**
 - Design wallet widget with balance display
-- Implement deposit flow with payment gateway
-- Add withdrawal screens with validation
+- Implement deposit flow:
+  1. Call backend API to get Stripe Checkout URL
+  2. Open URL in default browser using `url_launcher` package
+  3. Listen for webhook confirmation (via polling or push notification)
+  4. Refresh wallet balance after successful payment
+- Add withdrawal request screens
 - Show transaction history with pagination
+
+**Stripe Checkout Integration**
+- Use `url_launcher` package to open Stripe Checkout URL
+- Example:
+  ```dart
+  import 'package:url_launcher/url_launcher.dart';
+  
+  Future<void> openStripeCheckout(String checkoutUrl) async {
+    final Uri url = Uri.parse(checkoutUrl);
+    if (await canLaunchUrl(url)) {
+      await launchUrl(url, mode: LaunchMode.externalApplication);
+    }
+  }
+  ```
+- After payment, user returns to app
+- App polls backend or receives push notification
+- Refresh wallet balance
 
 **Offer Management**
 - Create offer cards with expandable details
@@ -518,6 +613,7 @@ POST /api/job/:id/cancel
 - Register device token with backend
 - Handle notification payloads
 - Navigate to relevant screens on tap
+- Listen for payment confirmation notifications
 
 **Offline Support**
 - Cache wallet balance locally
@@ -542,16 +638,19 @@ Represents user's financial account:
 **Fields**:
 - `_id`: Unique identifier
 - `user`: Reference to user document
-- `balance`: Available funds
-- `escrowBalance`: Funds held in escrow
+- `balance`: Available funds (tracked in database, not synced with Stripe)
 - `currency`: Currency code (default: "USD")
 - `isActive`: Account active status
 - `isFrozen`: Account frozen status (prevents transactions)
 - `totalEarnings`: Lifetime earnings
 - `totalSpent`: Lifetime spending
 - `totalWithdrawals`: Lifetime withdrawals
+- `stripeCustomerId`: Stripe Customer ID (for deposits)
+- `stripeConnectAccountId`: Stripe Connect Account ID (for payouts, contractors only)
 - `createdAt`: Account creation timestamp
 - `updatedAt`: Last update timestamp
+
+**Note**: The `escrowBalance` field has been removed. All balance tracking is now done via the single `balance` field.
 
 ### Offer Model
 
@@ -588,14 +687,13 @@ Records all financial movements:
 **Fields**:
 - `_id`: Unique identifier
 - `type`: Transaction type
-  - `deposit`: Money added to wallet
-  - `withdrawal`: Money withdrawn
-  - `escrow_hold`: Money moved to escrow
-  - `escrow_release`: Money released from escrow
-  - `platform_fee`: Platform fee payment
-  - `service_fee`: Service fee payment
-  - `contractor_payout`: Payment to contractor
-  - `refund`: Refund to customer
+  - `deposit`: Money added to wallet (via Stripe)
+  - `withdrawal`: Money withdrawn (via Stripe Connect)
+  - `wallet_transfer`: Money moved between wallets (internal)
+  - `platform_fee`: Platform fee payment (wallet adjustment)
+  - `service_fee`: Service fee payment (wallet adjustment)
+  - `contractor_payout`: Payment to contractor (wallet adjustment + Stripe transfer)
+  - `refund`: Refund to customer (wallet adjustment)
 - `amount`: Transaction amount
 - `from`: Sender user (populated)
 - `to`: Receiver user (populated)
@@ -604,6 +702,9 @@ Records all financial movements:
 - `status`: Transaction status (pending, completed, failed)
 - `description`: Transaction description
 - `failureReason`: Reason for failure
+- `stripePaymentIntentId`: Stripe Payment Intent ID (for deposits)
+- `stripeTransferId`: Stripe Transfer ID (for payouts)
+- `stripeCheckoutSessionId`: Stripe Checkout Session ID (for deposits)
 - `completedAt`: Completion timestamp
 - `createdAt`: Creation timestamp
 - `updatedAt`: Last update timestamp
@@ -628,9 +729,9 @@ Extended with payment fields:
 ### Customer
 
 **Allowed Actions**:
-- Deposit money into wallet
+- Deposit money into wallet (via Stripe Checkout)
 - Send offers to contractors
-- Mark jobs as complete
+- Mark jobs as complete (creates pending request for admin)
 - Cancel jobs before completion
 - View transaction history
 - View wallet balance
@@ -645,7 +746,7 @@ Extended with payment fields:
 **Allowed Actions**:
 - Accept or reject offers
 - Update job status to "in_progress"
-- Withdraw earnings from wallet
+- Request withdrawal from wallet (creates pending request)
 - View transaction history
 - View wallet balance
 
@@ -653,11 +754,16 @@ Extended with payment fields:
 - Cannot send offers
 - Cannot mark jobs as complete
 - Cannot cancel jobs (only customer/admin can)
+- Cannot directly withdraw (requires admin approval)
 
 ### Admin
 
 **Allowed Actions**:
-- Receive platform fees and service fees
+- Receive platform fees and service fees (wallet adjustments)
+- Approve job completion requests
+- Initiate Stripe Connect transfers to contractors
+- Approve contractor withdrawal requests
+- Initiate Stripe Connect transfers for withdrawals
 - Cancel jobs on behalf of users
 - View all transactions
 - Freeze wallets if needed
@@ -666,8 +772,8 @@ Extended with payment fields:
 **Automatic Functions**:
 - Admin user auto-created on first run
 - Admin wallet auto-created
-- Commission transfers automatic
-- No manual intervention required
+- Commission wallet adjustments automatic
+- Stripe transfers require manual approval
 
 ---
 
@@ -924,20 +1030,52 @@ All errors follow consistent structure:
 ADMIN_USER_ID=<optional_admin_id>
 DATABASE_URL=<mongodb_connection_string>
 JWT_SECRET=<secret_key>
-```
-
-**Optional Variables (Stripe Integration)**
-```
-STRIPE_SECRET_KEY=<stripe_key>
+STRIPE_SECRET_KEY=<stripe_secret_key>
 STRIPE_PUBLISHABLE_KEY=<stripe_publishable_key>
 STRIPE_WEBHOOK_SECRET=<webhook_secret>
-STRIPE_CONNECT_CLIENT_ID=<connect_client_id>
-FCM_SERVER_KEY=<firebase_key>
 ```
 
+**Optional Variables**
+```
+FCM_SERVER_KEY=<firebase_key>
+SMTP_HOST=<email_host>
+SMTP_PORT=<email_port>
+SMTP_USER=<email_user>
+SMTP_PASS=<email_password>
+```
+
+**Stripe Configuration**
+
+1. **Create Stripe Account**
+   - Sign up at https://stripe.com
+   - Complete business verification
+
+2. **Get API Keys**
+   - Navigate to Developers → API keys
+   - Copy Secret key (starts with `sk_test_` for test mode)
+   - Copy Publishable key (starts with `pk_test_` for test mode)
+   - For production, use live mode keys (`sk_live_` and `pk_live_`)
+
+3. **Set Up Webhooks**
+   - Go to Developers → Webhooks
+   - Click "Add endpoint"
+   - Enter your webhook URL: `https://yourdomain.com/api/webhooks/stripe`
+   - Select events to listen for:
+     - `checkout.session.completed`
+     - `checkout.session.async_payment_succeeded`
+     - `checkout.session.async_payment_failed`
+   - Copy the webhook signing secret (starts with `whsec_`)
+
+4. **Configure Stripe Connect** (for contractor payouts)
+   - Go to Connect → Settings
+   - Enable Express or Custom accounts based on your needs
+   - Configure branding and onboarding settings
+   - Set up payout schedules
+
 **Note**: For complete Stripe setup instructions, see:
-- `doc/payment/STRIPE_WEBHOOK_GUIDE.md` - Webhook implementation
-- `doc/payment/STRIPE_DASHBOARD_SETUP.md` - Dashboard configuration
+- Stripe Checkout: https://docs.stripe.com/payments/checkout
+- Stripe Connect: https://docs.stripe.com/connect
+- Webhook handling: https://docs.stripe.com/webhooks
 
 ### Database Setup
 
@@ -1035,6 +1173,32 @@ FCM_SERVER_KEY=<firebase_key>
 ---
 
 ## Changelog
+
+### Version 2.0.0 (January 28, 2026)
+
+**Major Update: Stripe Integration**
+- ✅ Stripe Checkout for customer deposits
+- ✅ Stripe Connect for contractor payouts
+- ✅ Webhook handling for payment confirmations
+- ✅ Admin-approved withdrawal system
+- ✅ Admin-approved job completion with payouts
+- ✅ Removed escrow balance (simplified to single balance)
+- ✅ Wallet-based transaction tracking
+- ✅ Updated documentation for new flow
+
+**Breaking Changes**
+- Removed `escrowBalance` field from Wallet model
+- Changed deposit flow to use Stripe Checkout URLs
+- Changed withdrawal flow to require admin approval
+- Changed job completion to require admin approval
+- Updated transaction types to reflect new flow
+
+**System Status**
+- Build: ✅ Passing
+- Stripe Integration: ✅ Ready for implementation
+- Documentation: ✅ Complete
+- Security: ✅ Enhanced with Stripe
+- Performance: ✅ Optimized
 
 ### Version 1.0.0 (November 13, 2025)
 
